# CosmicWatch

./: .env.example  .gitignore  CDM_DATA_SOURCES.md  CDM_PIPELINE.md  CONJUNCTION_ENGINE.md  DASHBOARD_ARCHITECTURE.md  DATA_FLOW_PROCESS.md  MODEL_CARD.md  README.md  cosmic_intelligence_model.py  main.py  presentation.py  pyproject.toml  requirements-cuda.txt  requirements.txt  space_track_data.py  test_fetch.py  update_performance_plan.md
.streamlit/: config.toml
RSDRAS_Lite/: README.md  RESEARCH_SUMMARY.md  advanced_trainer.py  create_final_report.py  demo_research_roadmap.py  enhanced_features.py  mini_tot_model.py  multimodal_prototype.py  quantum_prototype.py  requirements.txt  research_roadmap.py  start_testing.py  test_gpu_setup.py  train_mini_tot.py  train_mini_tot_fixed.py
attached_assets/: main.py  pyproject.toml  requirements.txt
backend/: main.py  requirements.txt  run.py
components/: alerts.py  globe.py  sidebar.py
conjunction/: __init__.py  cdm.py  evaluate_conjunction_model.py  frames.py  pc.py  train_conjunction_model.py
docs/: API_SETUP_GUIDE.md  DASHBOARD_SETUP_GUIDE.md  FINAL_MODEL_EVALUATION_REPORT.md  LEOLABS_INTEGRATION_PLAN.md  PROJECT_REPORT_LEOLABS.md  PROJECT_STATUS_SUMMARY.md  REVOLUTIONARY_SPACE_DEBRIS_AI_SYSTEM.md  RSDRAS_LITE_IMPLEMENTATION_PLAN.md  RSDRAS_LITE_INTEGRATION_README.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
models/: fixed_supernova_results.json  supernova_training_results.json  training_config.json
scripts/: build_cdm_public_dataset.py  cache_ai_predictions.py  compare_cdm_metrics.py  spacetrack_download_cdm_public.py  split_cdm_dataset.py  (+3 more)
(+37 files in other folders)
